force-app/main/default/objects/CM_DashboardSObjectConfig__mdt/CM_DashboardSObjectConfig__mdt.object-meta.xml
<CustomObject>
    <description>대시보드 CHART/TABLE 위젯에서 선택 가능한 SObject 화이트리스트</description>
    <label>CM Dashboard SObject Config</label>
    <pluralLabel>CM Dashboard SObject Configs</pluralLabel>
</CustomObject>