force-app/main/default/objects/CM_DashboardSObjectConfig__mdt/fields/AllowChart__c.field-meta.xml
<CustomField>
    <fullName>AllowChart__c</fullName>
    <defaultValue>true</defaultValue>
    <description>CHART 위젯에서 사용 허용 여부</description>
    <label>Allow Chart</label>
    <type>Checkbox</type>
</CustomField>