force-app/main/default/objects/CM_DashboardSObjectConfig__mdt/fields/AllowedAggregations__c.field-meta.xml
<CustomField>
    <fullName>AllowedAggregations__c</fullName>
    <description>허용된 집계 함수 목록 (쉼표 구분, 예: COUNT,SUM,AVG). 비워두면 전체 허용.</description>
    <label>Allowed Aggregations</label>
    <length>50</length>
    <type>Text</type>
</CustomField>