force-app/main/default/objects/CM_DashboardSObjectConfig__mdt/fields/AllowTable__c.field-meta.xml
<CustomField>
    <fullName>AllowTable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>TABLE 위젯에서 사용 허용 여부</description>
    <label>Allow Table</label>
    <type>Checkbox</type>
</CustomField>