force-app/main/default/objects/CM_DashboardSObjectConfig__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>위젯 설정에서 선택 가능 여부</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>