force-app/main/default/objects/CM_DashboardSObjectConfig__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>UI에 표시할 레이블 (예: 거래처, 연락처)</description>
    <label>Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>