force-app/main/default/objects/CM_DashboardSObjectConfig__mdt/fields/SObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>SObjectApiName__c</fullName>
    <description>Salesforce SObject API 이름 (예: Account, Contact)</description>
    <label>SObject API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>