force-app/main/default/objects/CM_DashboardSObjectConfig__mdt/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <description>드롭다운 표시 순서</description>
    <label>Sort Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>